[gd_scene load_steps=7 format=3 uid="uid://dk0wcigcbafs8"]

[ext_resource type="PackedScene" uid="uid://c5yhj5m3qblia" path="res://tools/beat_player.tscn" id="1_7nie5"]
[ext_resource type="Script" path="res://tools/beat_player.gd" id="2_wsgf3"]
[ext_resource type="PackedScene" uid="uid://djt43y0g843nn" path="res://addons/table_control/node_path_tracks.tscn" id="3_jlb3a"]
[ext_resource type="PackedScene" uid="uid://cwilpnax30ixm" path="res://addons/table_control/piano_roll_control.tscn" id="7_mhqj6"]
[ext_resource type="Script" path="res://addons/table_control/selection_box.gd" id="9_iclfu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_huy7e"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.25, 0.25, 0.25, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.175, 0.175, 0.175, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="Tabs" type="TabContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1000, 0)
size_flags_horizontal = 3
current_tab = 0
drag_to_rearrange_enabled = true

[node name="a_intro" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_wsgf3")
title = "a_intro"
metadata/id = "a_intro"

[node name="HBoxContainer" type="HBoxContainer" parent="a_intro"]
layout_mode = 2

[node name="Button" type="MenuBar" parent="a_intro/HBoxContainer"]
layout_mode = 2

[node name="Paint" type="PopupMenu" parent="a_intro/HBoxContainer/Button"]
item_count = 6
item_0/text = "Bang"
item_1/text = "Slide"
item_1/id = 1
item_2/text = "Method"
item_2/id = 2
item_3/text = "Tween"
item_3/id = 3
item_4/text = "Scene"
item_4/id = 4
item_5/text = "Dialog"
item_5/id = 5

[node name="@ScrollContainer@7" type="ScrollContainer" parent="a_intro/HBoxContainer/Button/Paint"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_huy7e")

[node name="@Control@8" type="Control" parent="a_intro/HBoxContainer/Button/Paint/@ScrollContainer@7"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="_h_scroll2" type="HScrollBar" parent="a_intro/HBoxContainer/Button/Paint/@ScrollContainer@7"]
visible = false
layout_mode = 2
max_value = 0.0

[node name="_v_scroll2" type="VScrollBar" parent="a_intro/HBoxContainer/Button/Paint/@ScrollContainer@7"]
visible = false
layout_mode = 2
max_value = 0.0

[node name="@Timer@9" type="Timer" parent="a_intro/HBoxContainer/Button/Paint"]
wait_time = 0.3
one_shot = true

[node name="@Timer@10" type="Timer" parent="a_intro/HBoxContainer/Button/Paint"]
wait_time = 0.3
one_shot = true

[node name="Paint2" type="PopupMenu" parent="a_intro/HBoxContainer/Button"]
item_count = 6
item_0/text = "Bang"
item_1/text = "Slide"
item_1/id = 1
item_2/text = "Method"
item_2/id = 2
item_3/text = "Tween"
item_3/id = 3
item_4/text = "Scene"
item_4/id = 4
item_5/text = "Dialog"
item_5/id = 5

[node name="Button2" type="MenuBar" parent="a_intro/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="a_intro"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="a_intro/MarginContainer"]
layout_mode = 2
mouse_filter = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="BeatPlayer" type="VBoxContainer" parent="a_intro/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="a_intro/MarginContainer/ScrollContainer/BeatPlayer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="a_intro/MarginContainer/ScrollContainer/BeatPlayer/PanelContainer"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="Save" type="Button" parent="a_intro/MarginContainer/ScrollContainer/BeatPlayer/PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
text = "BUTTON"

[node name="Save2" type="Button" parent="a_intro/MarginContainer/ScrollContainer/BeatPlayer/PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
text = "BUTTON"

[node name="HBoxContainer2" type="HBoxContainer" parent="a_intro/MarginContainer/ScrollContainer/BeatPlayer/PanelContainer"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="HSplitContainer" type="HSplitContainer" parent="a_intro/MarginContainer/ScrollContainer/BeatPlayer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 0
theme_override_constants/autohide = 0
split_offset = 150

[node name="TrackNames" parent="a_intro/MarginContainer/ScrollContainer/BeatPlayer/HSplitContainer" node_paths=PackedStringArray("piano_roll") instance=ExtResource("3_jlb3a")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
piano_roll = NodePath("../PianoRoll")

[node name="MarginContainer2" type="VBoxContainer" parent="a_intro/MarginContainer/ScrollContainer/BeatPlayer/HSplitContainer/TrackNames"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PianoRoll" parent="a_intro/MarginContainer/ScrollContainer/BeatPlayer/HSplitContainer" instance=ExtResource("7_mhqj6")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme = null

[node name="Node2D2" type="Node2D" parent="a_intro/MarginContainer/ScrollContainer/BeatPlayer/HSplitContainer/PianoRoll"]
visible = false
script = ExtResource("9_iclfu")
size = Vector2(-287, -89)

[node name="VBoxContainer2" type="MarginContainer" parent="a_intro/MarginContainer/ScrollContainer/BeatPlayer/HSplitContainer/PianoRoll"]
layout_mode = 2

[node name="TrackNames2" parent="a_intro/MarginContainer/ScrollContainer/BeatPlayer/HSplitContainer" node_paths=PackedStringArray("piano_roll") instance=ExtResource("3_jlb3a")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
piano_roll = NodePath("../PianoRoll")

[node name="PianoRoll2" parent="a_intro/MarginContainer/ScrollContainer/BeatPlayer/HSplitContainer" instance=ExtResource("7_mhqj6")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
scroll_horizontal_ratio = 559860.0
scroll_horizontal = 301.0

[node name="@SplitContainerDragger@11" type="SplitContainerDragger" parent="a_intro/MarginContainer/ScrollContainer/BeatPlayer/HSplitContainer"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
auto_translate = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
script = null

[node name="PanelContainer2" type="PanelContainer" parent="a_intro/MarginContainer/ScrollContainer/BeatPlayer"]
layout_mode = 2
mouse_filter = 2

[node name="HSplitContainer2" type="HSplitContainer" parent="a_intro/MarginContainer/ScrollContainer/BeatPlayer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 0
theme_override_constants/autohide = 0
split_offset = 150

[node name="BeatPlayer2" type="VBoxContainer" parent="a_intro/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="_h_scroll2" type="HScrollBar" parent="a_intro/MarginContainer/ScrollContainer"]
visible = false
layout_mode = 2
max_value = 308.0
page = 308.0

[node name="_v_scroll2" type="VScrollBar" parent="a_intro/MarginContainer/ScrollContainer"]
visible = false
layout_mode = 2
max_value = 847.0
page = 418.0

[node name="MarginContainer2" type="MarginContainer" parent="a_intro/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="GhostHSplitContainer" type="HSplitContainer" parent="a_intro/MarginContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
split_offset = 300
dragger_visibility = 1

[node name="Control" type="Control" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Control2" type="MarginContainer" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_top = 64

[node name="VScrollBar" type="VScrollBar" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
max_value = 1.0
page = 0.05

[node name="VScrollBar2" type="VScrollBar" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
max_value = 1.0
page = 0.05

[node name="HBoxContainer" type="MarginContainer" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_right = 10

[node name="HScrollBar" type="HScrollBar" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
page = 0.05

[node name="HScrollBar2" type="HScrollBar" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
page = 0.05

[node name="MarginContainer2" type="MarginContainer" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_top = 64

[node name="HBoxContainer2" type="MarginContainer" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_right = 10

[node name="MarginContainer" type="MarginContainer" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="MenuButton" type="OptionButton" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
selected = 2
item_count = 3
popup/item_0/text = "1/16"
popup/item_0/id = 0
popup/item_1/text = "1/4"
popup/item_1/id = 1
popup/item_2/text = "1"
popup/item_2/id = 2

[node name="@PopupMenu@17" type="PopupMenu" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/MarginContainer/MenuButton"]
item_count = 3
item_0/text = "1/16"
item_0/checkable = 2
item_1/text = "1/4"
item_1/checkable = 2
item_1/id = 1
item_2/text = "1"
item_2/checkable = 2
item_2/checked = true
item_2/id = 2

[node name="@ScrollContainer@13" type="ScrollContainer" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/MarginContainer/MenuButton/@PopupMenu@17"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_huy7e")

[node name="@Control@14" type="Control" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/MarginContainer/MenuButton/@PopupMenu@17/@ScrollContainer@13"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="_h_scroll2" type="HScrollBar" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/MarginContainer/MenuButton/@PopupMenu@17/@ScrollContainer@13"]
visible = false
layout_mode = 2
max_value = 0.0

[node name="_v_scroll2" type="VScrollBar" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/MarginContainer/MenuButton/@PopupMenu@17/@ScrollContainer@13"]
visible = false
layout_mode = 2
max_value = 0.0

[node name="@Timer@15" type="Timer" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/MarginContainer/MenuButton/@PopupMenu@17"]
wait_time = 0.3
one_shot = true

[node name="@Timer@16" type="Timer" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/MarginContainer/MenuButton/@PopupMenu@17"]
wait_time = 0.3
one_shot = true

[node name="MenuButton2" type="OptionButton" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
selected = 2
item_count = 3
popup/item_0/text = "1/16"
popup/item_0/id = 0
popup/item_1/text = "1/4"
popup/item_1/id = 1
popup/item_2/text = "1"
popup/item_2/id = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Control3" type="Control" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Control4" type="MarginContainer" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer"]
layout_mode = 2
mouse_filter = 2

[node name="@SplitContainerDragger@12" type="SplitContainerDragger" parent="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
auto_translate_mode = 0
editor_description = ""
visible = false
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
auto_translate = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
script = null

[node name="GhostHSplitContainer2" type="HSplitContainer" parent="a_intro/MarginContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
split_offset = 300
dragger_visibility = 1

[node name="ScrollContainer2" type="ScrollContainer" parent="a_intro/MarginContainer"]
layout_mode = 2
mouse_filter = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="MarginContainer3" type="MarginContainer" parent="a_intro/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="a_intro"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="a_intro"]
layout_mode = 2
size_flags_vertical = 3

[node name="dull" parent="." instance=ExtResource("1_7nie5")]
visible = false
layout_mode = 2
title = "dull"
metadata/id = "dull"

[node name="HBoxContainer2" type="HBoxContainer" parent="dull"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="dull"]
layout_mode = 2
size_flags_vertical = 3

[node name="impress" parent="." instance=ExtResource("1_7nie5")]
visible = false
layout_mode = 2
title = "impress"
metadata/id = "impress"

[node name="HBoxContainer2" type="HBoxContainer" parent="impress"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="impress"]
layout_mode = 2
size_flags_vertical = 3

[node name="just_kiks" parent="." instance=ExtResource("1_7nie5")]
visible = false
layout_mode = 2
title = "just_kiks"
metadata/id = "just_kiks"

[node name="HBoxContainer2" type="HBoxContainer" parent="just_kiks"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="just_kiks"]
layout_mode = 2
size_flags_vertical = 3

[node name="kick_hat_snare" parent="." instance=ExtResource("1_7nie5")]
visible = false
layout_mode = 2
title = "kick_hat_snare"
metadata/id = "kick_hat_snare"

[node name="HBoxContainer2" type="HBoxContainer" parent="kick_hat_snare"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="kick_hat_snare"]
layout_mode = 2
size_flags_vertical = 3

[node name="kik_snare" parent="." instance=ExtResource("1_7nie5")]
visible = false
layout_mode = 2
title = "kik_snare"
metadata/id = "kik_snare"

[node name="HBoxContainer2" type="HBoxContainer" parent="kik_snare"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="kik_snare"]
layout_mode = 2
size_flags_vertical = 3

[node name="kik_snare_auto" parent="." instance=ExtResource("1_7nie5")]
visible = false
layout_mode = 2
title = "kik_snare_auto"
metadata/id = "kik_snare_auto"

[node name="HBoxContainer2" type="HBoxContainer" parent="kik_snare_auto"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="kik_snare_auto"]
layout_mode = 2
size_flags_vertical = 3

[node name="rec_test" parent="." instance=ExtResource("1_7nie5")]
visible = false
layout_mode = 2
title = "rec_test"
metadata/id = "rec_test"

[node name="HBoxContainer2" type="HBoxContainer" parent="rec_test"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="rec_test"]
layout_mode = 2
size_flags_vertical = 3

[node name="text" parent="." instance=ExtResource("1_7nie5")]
visible = false
layout_mode = 2
title = "text"
metadata/id = "text"

[node name="HBoxContainer2" type="HBoxContainer" parent="text"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="text"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="id_pressed" from="a_intro/HBoxContainer/Button/Paint" to="a_intro" method="_paint_id_pressed"]
[connection signal="dragged" from="a_intro/MarginContainer/ScrollContainer/BeatPlayer/HSplitContainer" to="a_intro" method="_split_container_dragged"]
[connection signal="value_changed" from="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/VBoxContainer/MarginContainer/VScrollBar" to="a_intro" method="_scroll_vertical"]
[connection signal="value_changed" from="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/VBoxContainer/HBoxContainer/HScrollBar" to="a_intro" method="_scroll_horizontal"]
[connection signal="item_selected" from="a_intro/MarginContainer/MarginContainer2/GhostHSplitContainer/Control2/MarginContainer/MenuButton" to="a_intro" method="_quant_selected"]
