[gd_scene load_steps=4 format=3 uid="uid://c5yhj5m3qblia"]

[ext_resource type="Script" path="res://tools/beat_player.gd" id="1_cu0vf"]
[ext_resource type="Script" path="res://tools/grid.gd" id="3_8ww8p"]
[ext_resource type="PackedScene" uid="uid://0xf0dcjgbmqj" path="res://addons/Inspector/inspector.tscn" id="5_5v16j"]

[node name="BeatPlayer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -952.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cu0vf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
z_index = -1
layout_mode = 2
mouse_filter = 2
color = Color(0.243137, 0.733333, 0.372549, 1)

[node name="HSplitContainer2" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2
split_offset = 1300

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/HSplitContainer2"]
layout_mode = 2
split_offset = 150

[node name="MarginContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer2/HSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Spacer" type="ReferenceRect" parent="MarginContainer/HSplitContainer2/HSplitContainer/MarginContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="TrackNames" type="VBoxContainer" parent="MarginContainer/HSplitContainer2/HSplitContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="AddTrackButton" type="Button" parent="MarginContainer/HSplitContainer2/HSplitContainer/MarginContainer"]
layout_mode = 2
text = "ADD TRACK"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HSplitContainer2/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HSplitContainer2/HSplitContainer/ScrollContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HSplitContainer2/HSplitContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
color = Color(1, 1, 1, 0)
script = ExtResource("3_8ww8p")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer2/HSplitContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Time" type="ColorRect" parent="MarginContainer/HSplitContainer2/HSplitContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(0.890196, 0, 0.368627, 1)

[node name="Headings" type="HBoxContainer" parent="MarginContainer/HSplitContainer2/HSplitContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_constants/separation = 0

[node name="Tracks" type="VBoxContainer" parent="MarginContainer/HSplitContainer2/HSplitContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Cursor" type="ColorRect" parent="MarginContainer/HSplitContainer2/HSplitContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HSplitContainer2"]
layout_mode = 2

[node name="Inspector" parent="MarginContainer/HSplitContainer2/MarginContainer2" instance=ExtResource("5_5v16j")]
unique_name_in_owner = true
layout_mode = 2
include_list = Array[String](["type", "time", "length", "value", "from_value"])

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_save_pressed"]
[connection signal="dragged" from="MarginContainer/HSplitContainer2" to="." method="_inspector_split_dragged"]
[connection signal="pressed" from="MarginContainer/HSplitContainer2/HSplitContainer/MarginContainer/AddTrackButton" to="." method="_new_track_pressed"]
[connection signal="gui_input" from="MarginContainer/HSplitContainer2/HSplitContainer/ScrollContainer/MarginContainer/VBoxContainer/Time" to="." method="_time_gui_input"]
